--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -32,10 +32,26 @@
   },
   "customers": {
     "subtitle": "Отзывы клиентов",
-    "title": "Что говорят наши клиенты",
-    "text": "Используйте опыт Manasoft и поднимите свой бизнес на новый уровень!",
-    "customer1_name": "Макс Томпсон (Creative Designer)",
-    "customer1_text": "Команда Manasoft – потрясающие профессионалы! Они разработали для нас кастомного Telegram-бота, который ускорил процесс обслуживания клиентов. Теперь мы можем обслуживать клиентов быстрее и эффективнее."
+    "title": "Мнения наших клиентов",
+    "text": "Воспользуйтесь опытом Manasoft и выведите свой бизнес на новый уровень!",
+
+    "customer1_name": "Азиза Каримова (Владелица онлайн-магазина)",
+    "customer1_text": "Команда Manasoft разработала для нас специального Telegram-бота. Теперь заказы принимаются автоматически, а обслуживание клиентов стало гораздо быстрее.",
+
+    "customer2_name": "Камолиддин Усмонов (Финансист)",
+    "customer2_text": "Благодаря системе финансовой отчетности, разработанной ими, стало намного проще контролировать расходы и доходы. Качество работы на высшем уровне.",
+
+    "customer3_name": "Дильноза Юлдашева (Маркетолог)",
+    "customer3_text": "Сотрудничество с Manasoft было очень легким и удобным. Они обращают внимание на каждую деталь и всегда остаются на связи.",
+
+    "customer4_name": "Шавкат Анваров (Основатель стартапа)",
+    "customer4_text": "Команда Manasoft помогла воплотить нашу идею в реальную платформу. Быстро, качественно и с отличным результатом!",
+
+    "customer5_name": "Малика Расулова (Психолог)",
+    "customer5_text": "Они создали специального бота для работы с моими клиентами через Telegram. Доступная цена и отличная техническая поддержка!",
+
+    "customer6_name": "Жавлон Эшкӯватов (Фрилансер-программист)",
+    "customer6_text": "Технически грамотная команда. Они построили систему на правильной архитектуре и сдали работу в срок."
   },
   "services": {
     "services_home_title1": "Объедините технологии и опыт",
@@ -105,23 +121,29 @@
     "card5_text": "Автоматизация торговых процессов"
   },
   "project_page": {
-    "subtitle": "+100 реализованных проектов",
+    "subtitle": "Более 100 проектов",
     "title": "Наши проекты",
-    "text": "Ищете надежного IT-партнера для эффективного развития вашего бизнеса? Manasoft предлагает вам современные, быстрые и надежные решения!",
+    "text": "Ищете надежного IT-партнера для эффективного развития бизнеса? Manasoft предлагает современные, быстрые и надежные решения!",
     "button_text": "Все",
     "button_text1": "Мобильное приложение",
     "button_text2": "Веб-сайт",
     "button_text3": "CRM",
     "button_text4": "UX/UI",
-    "button_text5": "Телеграм-бот",
+    "button_text5": "Telegram-бот",
     "card1_title": "Femmy",
     "card1_text": "Приложение для мобильных устройств",
     "card2_title": "IMPERIAL GRANITE",
     "card2_text": "Приложение для мобильных устройств",
     "card3_title": "MedAgent",
     "card3_text": "Приложение для мобильных устройств",
-    "card4_title": "Алла",
-    "card4_text": "Приложение для мобильных устройств"
+    "card4_title": "Alla",
+    "card4_text": "Приложение для мобильных устройств",
+    "card5_title": "Rai Group",
+    "card5_text": "Веб-сайт",
+    "card6_title": "Mohinur Rahimjonova Bot",
+    "card6_text": "Бот",
+    "card7_title": "Hisobchi AI Bot",
+    "card7_text": "Бот"
   },
   "project1": {
     "banner_title": "Femmy",
@@ -129,13 +151,17 @@
     "banner_text": "Femmy – это календарь здоровья и ежедневное приложение, необходимое каждой женщине.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/UI",
+    "banner_property2": "Мобильное приложение",
     "project_title": "Особенности проекта",
     "project_card1_title": "Цель приложения Femmy",
     "project_card1_text": "Femmy – все необходимые инструменты для женщин: школа беременности, дневник настроения, калькулятор овуляции, советы по уходу за ребенком и рекомендации гинеколога.",
     "project_card2_title": "Школа беременности",
     "project_card2_text": "Рекомендации по неделям беременности, уход до и после родов, советы по лактации и грудному вскармливанию, правильное питание и здоровье во время беременности.",
     "project_card3_title": "Полезные статьи и советы гинеколога",
-    "project_card3_text": "Статьи о женском здоровье, подробная информация о беременности, родах и климаксе. Надежные советы, подтвержденные гинекологами."
+    "project_card3_text": "Статьи о женском здоровье, подробная информация о беременности, родах и климаксе. Надежные советы, подтвержденные гинекологами.",
+    "project_card4_title": "Особенности лендинга:",
+    "project_card4_text": "Femmy — это мобильное приложение для женщин, предназначенное для отслеживания менструального цикла, беременности и других физиологических состояний. Для этого проекта мы разработали современный и интуитивно понятный дизайн лендинга. Дизайн адаптирован под потребности женщин: использованы мягкие цвета и элементы интерфейса, вызывающие доверие."
   },
   "project2": {
     "banner_title": "Imperial Granite",
@@ -143,6 +169,8 @@
     "banner_text": "Приложение Imperial Granite – официальное мобильное приложение для клиентов, продавцов и производителей.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/UI",
+    "banner_property2": "Мобильное приложение",
     "project_title": "Особенности проекта",
     "project_card1_title": "Цель приложения Imperial Granite",
     "project_card1_text": "Объединяет клиентов, продавцов и производителей, обеспечивая удобное взаимодействие на всех этапах – от выбора продукции до производства и доставки.",
@@ -157,6 +185,8 @@
     "banner_text": "MedAgent – для медицинских представителей, фармацевтических компаний, менеджеров и супервайзеров.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/UI",
+    "banner_property2": "Мобильное приложение",
     "project_title": "Особенности проекта",
     "project_card1_title": "Цель приложения MedAgent",
     "project_card1_text": "MedAgent – это инновационная ERP-система для автоматизации работы медицинских представителей, контроля визитов в аптеки и к врачам, а также управления отчетностью.",
@@ -166,56 +196,73 @@
     "project_card3_text": "Управление базой данных врачей и аптек. Подробные отчеты по каждому визиту, автоматизация рабочих процессов, отслеживание эффективности команды в режиме реального времени."
   },
   "project4": {
-    "banner_title": "Алла",
-    "banner_subtitle": "Алла — успокаивающее аудио-приложение для детей",
-    "banner_text": "Алла — мобильное приложение для спокойного сна детей от 0 до 6 лет с надёжным аудиоконтентом и удобным интерфейсом, созданное с учётом потребностей мам.",
+    "banner_title": "Alla",
+    "banner_subtitle": "Alla — успокаивающее аудио-приложение для детей",
+    "banner_text": "Alla — мобильное приложение с удобным интерфейсом и надёжным аудиоконтентом, созданное для спокойного сна детей от 0 до 6 лет и в помощь мамам.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/UI",
+    "banner_property2": "Мобильное приложение",
     "project_title": "Особенности проекта",
-    "project_card1_title": "Цель приложения Алла",
-    "project_card1_text": "Помочь детям спать в спокойной и умиротворяющей обстановке, а матерям предоставить удобный и качественный инструмент в этом процессе. Каждый контент подобран в соответствии с возрастом и потребностями ребенка.",
+    "project_card1_title": "Цель приложения Alla",
+    "project_card1_text": "Помочь детям уснуть в спокойной обстановке, а мамам — предоставить удобный и качественный инструмент. Каждый контент подбирается с учётом возраста и потребностей ребёнка.",
     "project_card2_title": "Возможности приложения:",
-    "project_card2_text": "Помощь детям заснуть в спокойной и умиротворённой обстановке, предоставляя мамам удобный и качественный инструмент. В приложении собран проверенный и возрасту подходящий аудиоконтент: аяты Корана, классические колыбельные, сказки и звуки животных. Функции записи голоса, список избранного и чистый, понятный детям интерфейс делают использование простым и удобным.",
-    "project_card3_title": "Tashriflarni rejalashtirish va nazorat qilish",
-    "project_card3_text": "Shifokorlar va dorixonalar ma’lumotlar bazasini boshqarish. Har bir tashrif bo‘yicha batafsil hisobotlar, ish jarayonlarini avtomatlashtirish, jamoa samaradorligini real vaqt rejimida kuzatish"
+    "project_card2_text": "В приложении собран надежный аудиоконтент, такой как аяты Корана, классические колыбельные, сказки и звуки животных. Также есть функция записи голоса, список избранного и простой, интуитивно понятный интерфейс для детей."
+  },
+  "project5": {
+    "banner_title": "Rai Group",
+    "banner_subtitle": "Rai Group — корпоративный сайт строительной компании",
+    "banner_text": "Сайт Rai Group предоставляет информацию об услугах, проектах и новостях строительной компании. Сайт выполнен в современном дизайне, с удобной навигацией и содержит всю необходимую информацию для пользователей.",
+    "banner_button3": "Посмотреть полностью",
+    "banner_property1": "UX/UI",
+    "banner_property2": "Веб-сайт",
+    "project_title": "Особенности проекта",
+    "project_card1_title": "Описание:",
+    "project_card1_text": "Rai Group — современная строительная компания. Через сайт пользователи получают информацию о проектах, услугах и новостях компании, а также возможность связаться напрямую.",
+    "project_card2_title": "Возможности сайта:",
+    "project_card2_text": "На сайте представлены преимущества компании, галерея завершенных объектов, основные подходы (качество, надежность и др.), новости, видеоматериалы со строительных процессов, логотипы партнеров и форма обратной связи для пользователей."
   },
   "project6": {
     "banner_title": "Бот Мохинур Рахимжоновой",
-    "banner_subtitle": "Telegram-бот для бухгалтерского вебинара",
-    "banner_text": "Telegram-бот автоматизирует регистрацию на бухгалтерские вебинары: пользователь переходит по ссылке, регистрируется и автоматически присоединяется к каналу. Организатор может общаться с клиентами напрямую через бота.",
-    "banner_button1": "Play Market",
-    "banner_button2": "App Store",
+    "banner_subtitle": "Telegram-бот для бухгалтерских вебинаров",
+    "banner_text": "Telegram-бот автоматизирует регистрацию на бухгалтерские вебинары: пользователь переходит по ссылке, регистрируется и присоединяется к каналу. Организатор может взаимодействовать с клиентами через бота.",
+    "banner_button3": "Telegram-бот",
+    "banner_property1": "Telegram-бот",
     "project_title": "Особенности проекта",
     "project_card1_title": "Возможности бота:",
-    "project_card1_text": "Бот обеспечивает автоматическую регистрацию, подключение к вебинар-каналу, формирует базу пользователей для организатора и обеспечивает максимальную конверсию при минимальном взаимодействии."
+    "project_card1_text": "Бот обеспечивает автоматическую регистрацию, подключение к каналу вебинара, формирует базу пользователей для организатора и обеспечивает максимальную конверсию при минимальных усилиях."
   },
   "project7": {
-    "banner_title": "Бот Hisobchi AI",
-    "banner_subtitle": "Hisobchi AI — бот с ИИ для управления личными финансами",
-    "banner_text": "Hisobchi AI — это Telegram-бот, который принимает доходы, расходы и долги в виде текста или голосового сообщения и автоматически анализирует и классифицирует их с помощью искусственного интеллекта. Формирует статистику и отправляет напоминания.",
+    "banner_title": "Hisobchi AI бот",
+    "banner_subtitle": "Hisobchi AI — AI-бот для управления личными финансами",
+    "banner_text": "Hisobchi AI — это Telegram-бот, который принимает доходы, расходы и долги в виде текста или голосовых сообщений, анализирует и классифицирует их с помощью ИИ. Формирует статистику и отправляет напоминания.",
     "banner_button3": "Telegram-бот",
+    "banner_property1": "Telegram-бот",
     "project_title": "Особенности проекта",
     "project_card1_title": "Описание:",
-    "project_card1_text": "Hisobchi AI — это финансовый помощник с искусственным интеллектом, который помогает пользователям легко и быстро контролировать свои доходы, расходы и долги. Работает через Telegram: пользователь отправляет информацию о своих финансах в текстовом или голосовом виде, бот автоматически классифицирует данные, формирует статистику и отправляет напоминания.",
+    "project_card1_text": "Hisobchi AI — финансовый помощник с искусственным интеллектом, который помогает пользователям легко и быстро контролировать свои доходы, расходы и долги. Работает через Telegram: пользователь сообщает боту свои данные, а бот автоматически классифицирует их, формирует статистику и отправляет напоминания.",
     "project_card2_title": "Основные функции:",
-    "project_card2_text": "Распознавание доходов и расходов на основе ИИ Контроль задолженностей и напоминания Ежедневная, еженедельная, ежемесячная и годовая статистика Понимание текстовых и голосовых команд"
+    "project_card2_text": "Распознавание доходов и расходов с помощью ИИ Контроль задолженности и напоминания Ежедневная, еженедельная, ежемесячная и годовая статистика Понимание текстовых и голосовых команд"
   },
   "partners": {
     "title": "Наши партнеры"
   },
   "question_page": {
+    "question_title": "Часто задаваемые вопросы",
+    "question_subtitle": "Интересные вопросы",
+    "question_text": "Если у вас есть вопросы, не стесняйтесь связаться с нами — мы всегда готовы помочь!",
     "question_card1_text": "Сколько времени занимает разработка IT-проекта?",
-    "question_card1_answer": "Manasoft — это инновационная IT-компания и ваш надежный партнёр по созданию Telegram-ботов, мобильных приложений и веб-сайтов. ...",
-    "question_card2_text": "Какая информация нужна для создания Telegram-бота?",
-    "question_card2_answer": "Для создания Telegram-бота нам нужен список необходимых функций, предполагаемые задачи и, при необходимости, информация о платёжной системе. ...",
+    "question_card1_answer": "Manasoft — это инновационная IT-компания и надежный партнер в создании Telegram-ботов, мобильных приложений и сайтов для вашего бизнеса! Наша команда внедряет технологии для эффективных решений. Качество и скорость — наш приоритет!",
+    "question_card2_text": "Какая информация необходима для создания Telegram-бота?",
+    "question_card2_answer": "Для создания бота нам нужно знать список необходимых функций, задачи, которые он должен выполнять, а также, при необходимости, данные о платежной системе. На основе этой информации команда Manasoft разработает индивидуального бота.",
     "question_card3_text": "Как определяется стоимость мобильного приложения?",
-    "question_card3_answer": "Стоимость зависит от выбранных функций, сложности дизайна и платформ (iOS/Android). ...",
-    "question_card4_text": "Предоставляете ли вы услугу SEO-оптимизации сайта?",
-    "question_card4_answer": "Конечно! Веб-сайты, разработанные Manasoft, полностью соответствуют требованиям SEO. ...",
-    "question_card5_text": "Какие преимущества даёт использование CRM-системы?",
-    "question_card5_answer": "CRM-система помогает управлять отношениями с клиентами, упростить процессы продаж и повысить эффективность маркетинга. ...",
-    "question_card6_text": "Как вы поддерживаете связь во время проекта?",
-    "question_card6_answer": "Мы поддерживаем регулярную связь с каждым клиентом. Предоставляем отчёты через Telegram, email или звонки. ..."
+    "question_card3_answer": "Цена зависит от выбранных функций, сложности дизайна и платформ (iOS/Android). Manasoft готовит индивидуальное коммерческое предложение с прозрачной ценовой политикой.",
+    "question_card4_text": "Вы предоставляете услуги SEO-оптимизации сайта?",
+    "question_card4_answer": "Конечно! Все сайты, разработанные Manasoft, соответствуют требованиям SEO. Мы выполняем все необходимые технические и контентные оптимизации для продвижения вашего сайта в Google и других поисковиках.",
+    "question_card5_text": "Какую пользу приносит CRM-система?",
+    "question_card5_answer": "CRM-система помогает управлять взаимоотношениями с клиентами, оптимизировать процессы продаж и повысить эффективность маркетинга. Manasoft разрабатывает CRM-решения, соответствующие бизнес-процессам клиента.",
+    "question_card6_text": "Как будет организована связь во время проекта?",
+    "question_card6_answer": "Мы поддерживаем регулярную связь с каждым клиентом. Предоставляем отчеты через Telegram, email или звонки и вносим необходимые изменения. Открытая и эффективная коммуникация — наш приоритет."
   },
   "contact_page": {
     "title": "Связаться с нами",
