--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -151,13 +151,17 @@
     "banner_text": "Femmy – bu har bir ayol uchun zarur bo‘lgan sog‘liq kalendari va kundalik ilova.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1":"UX/Ui",
+    "banner_property2":"Mobil ilova",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "Femmy ilovasi maqsadi",
     "project_card1_text": "Femmy – ayollar uchun kerak bo‘lgan barcha vositalar homiladorlik maktabi, kundalik kayfiyat kuzatuvchi, ovulyatsiya kalkulyatori, bola parvarishi bo‘yicha maslahatlar va ginekolog tavsiyalari.",
     "project_card2_title": "Homiladorlik Maktabi ",
     "project_card2_text": "Homiladorlik haftalari bo‘yicha tavsiyalar, tug‘ruqdan oldin va keyingi parvarish, laktatsiya va emizish bo‘yicha maslahatlar, homiladorlik davrida to‘g‘ri ovqatlanish va salomatlik.",
     "project_card3_title": "Foydali Maqolalar va Ginekolog Tavsiyalari",
-    "project_card3_text": "Ayollar salomatligi bo‘yicha maqolalar, homiladorlik, tug‘ruq va klimaks haqida batafsil ma’lumot Ginekologlar tomonidan tasdiqlangan ishonchli maslahatlar. "
+    "project_card3_text": "Ayollar salomatligi bo‘yicha maqolalar, homiladorlik, tug‘ruq va klimaks haqida batafsil ma’lumot Ginekologlar tomonidan tasdiqlangan ishonchli maslahatlar. ",
+    "project_card4_title": "Landing sahifa xususiyatlari:",
+    "project_card4_text": "Femmy — ayollar salomatligi, hayz sikli, homiladorlik va boshqa fiziologik holatlarni boshqarish uchun mo‘ljallangan mobil ilova. Ushbu loyiha uchun biz zamonaviy va intuitiv landing sahifa dizaynini yaratdik. Dizayn ayollar ehtiyojlariga moslashtirilgan bo‘lib, unda yumshoq ranglar va ishonch uyg‘otuvchi interfeys elementlari qo‘llanilgan."
   },
   "project2": {
     "banner_title": "Imperial Granite",
@@ -165,6 +169,8 @@
     "banner_text": "Imperial Granite ilovasi - Mijozlar, sotuvchilar va ishlab chiqaruvchilar uchun rasmiy mobil ilova",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/Ui",
+    "banner_property2": "Mobil ilova",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "Imperial Granite ilovasi maqsadi",
     "project_card1_text": "Mijozlar, sotuvchilar va ishlab chiqaruvchilarni birlashtiradi, mahsulot tanlashdan tortib ishlab chiqarish va yetkazib berishgacha bo‘lgan barcha bosqichlarda qulay o‘zaro ta’sir jarayonini ta’minlaydi.",
@@ -179,6 +185,8 @@
     "banner_text": "MedAgent – Tibbiyot vakillariga, marmatsevtika kompaniyalariga, menejer va supervayzerlarga",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/Ui",
+    "banner_property2": "Mobil ilova",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "MedAgent ilovasi maqsadi",
     "project_card1_text": "MedAgent - bu tibbiyot vakillari ishini avtomatlashtirish, dorixonalarga va shifokorlarga tashriflarni nazorat qilish, shuningdek, hisobotlarni boshqarish uchun innovatsion ERP tizimi.",
@@ -193,6 +201,8 @@
     "banner_text": "Alla — 0–6 yoshli bolalarning tinch uxlashi uchun mo‘ljallangan, onalar ehtiyojiga mos, ishonchli audio kontent va qulay interfeysga ega mobil ilova.",
     "banner_button1": "Play Market",
     "banner_button2": "App Store",
+    "banner_property1": "UX/Ui",
+    "banner_property2": "Mobil ilova",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "Alla ilovasi maqsadi",
     "project_card1_text": "Bolalarni sokin va xotirjam muhitda uxlashiga yordam berish, onalarga esa bu jarayonda qulay va sifatli vosita taqdim etish. Har bir kontent bolaning yoshiga va ehtiyojiga mos tanlangan.",
@@ -201,22 +211,23 @@
   },
   "project5": {
     "banner_title": "Rai Group",
-    "banner_subtitle": "Rai Group — Zamonaviy qurilish kompaniyasining korporativ veb-sayti",
-    "banner_button1": "Play Market",
-    "banner_button2": "App Store",
+    "banner_subtitle": "Rai Group — qurilish kompaniyasining veb-sayti",
+    "banner_text": "Rai Group veb-sayti qurilish kompaniyasining xizmatlari, loyihalari va yangiliklari haqida ma’lumot beradi. Sayt zamonaviy dizayn, qulay navigatsiya va foydalanuvchilar uchun zaruriy ma’lumotlarni taqdim etadi.",
+    "banner_button3": "To'liq ko'rish",
+    "banner_property1": "Veb sayt",
+    "banner_property2": "UX/Ui",
     "project_title": "Loyihaning xususiyatlari",
-    "project_card1_title": "Alla ilovasi maqsadi",
-    "project_card1_text": "Bolalarni sokin va xotirjam muhitda uxlashiga yordam berish, onalarga esa bu jarayonda qulay va sifatli vosita taqdim etish. Har bir kontent bolaning yoshiga va ehtiyojiga mos tanlangan.",
-    "project_card2_title": "Ilovaning imkoniyatlari:",
-    "project_card2_text": "Ilova tufayli siz uchrashuvlarni samarali rejalashtirish, o‘zaro aloqalar hisobini yuritish va natijalarni real vaqt rejimida tahlil qilish imkoniyatiga ega bo‘lasiz.",
-    "project_card3_title": "Tashriflarni rejalashtirish va nazorat qilish",
-    "project_card3_text": "Shifokorlar va dorixonalar ma’lumotlar bazasini boshqarish. Har bir tashrif bo‘yicha batafsil hisobotlar, ish jarayonlarini avtomatlashtirish, jamoa samaradorligini real vaqt rejimida kuzatish"
+    "project_card1_title": "Tavsif:",
+    "project_card1_text": "Rai Group — zamonaviy qurilish kompaniyasi bo‘lib, veb-sayti orqali foydalanuvchilarga loyihalar, xizmatlar va yangiliklar haqida ma’lumot berib, kompaniya bilan bevosita bog‘lanish imkonini yaratadi.",
+    "project_card2_title": "Veb saytning imkoniyatlari:",
+    "project_card2_text": "Saytda kompaniya afzalliklari, qurilgan obyektlar galereyasi, asosiy yondashuvlar (sifat, ishonchlilik va boshqalar), yangiliklar, qurilish jarayonidan videolar, hamkorlar logotiplari hamda foydalanuvchilar uchun aloqa shakli mavjud."
   },
   "project6": {
     "banner_title": "Mohinur Rahimjonova Bot",
     "banner_subtitle": "Buxgalteriya vebinari uchun Telegram bot",
     "banner_text": "Telegram bot buxgalteriya vebinarlariga ro‘yxatni avtomatlashtiradi: foydalanuvchi havola orqali kiradi, ro‘yxatdan o‘tadi va kanalga qo‘shiladi. Tashkilotchi esa bot orqali mijozlar bilan muloqot qiladi.",
     "banner_button3": "Telegram bot",
+    "banner_property1": "Telegram bot",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "Bot imkoniyatlari:",
     "project_card1_text": "Bot avtomatik ro‘yxatdan o‘tishni ta’minlaydi, vebinar kanaliga ulanadi, tashkilotchi uchun foydalanuvchilar bazasini shakllantiradi va minimal aloqa orqali maksimal konversiyani ta’minlaydi."
@@ -226,6 +237,7 @@
     "banner_subtitle": "Hisobchi AI — shaxsiy moliyani boshqarish uchun AI bot",
     "banner_text": "Hisobchi AI — Telegram bot bo‘lib, daromad, xarajat va qarzlarni matn yoki ovoz orqali qabul qilib, sun’iy intellekt yordamida avtomatik tahlil va toifalaydi. Statistikalar shakllantiriladi, eslatmalar yuboriladi.",
     "banner_button3": "Telegram bot",
+    "banner_property1": "Telegram bot",
     "project_title": "Loyihaning xususiyatlari",
     "project_card1_title": "Tavsif:",
     "project_card1_text": "Hisobchi AI — bu foydalanuvchilarga daromad, xarajat va qarzlarini oson va tez tarzda nazorat qilish imkonini beruvchi sun'iy intellekt yordamidagi moliyaviy yordamchi. Telegram orqali ishlaydi: foydalanuvchi oddiy matn yoki ovoz orqali o‘z moliyaviy holatini botga bildiradi, bot esa avtomatik ravishda toifalab, statistikani shakllantiradi va eslatmalar yuboradi.",
